[package]
name         = "proteus"
version      = "2.0.0"
authors      = ["Wire Swiss GmbH <seceng@wire.com>"]
description  = "Axolotl protocol implementation"
homepage     = "https://github.com/wireapp/proteus"
repository   = "https://github.com/wireapp/proteus.git"
license      = "GPL-3.0"
edition      = "2021"

[workspace]
members = [
    "crates/proteus-traits",
    "crates/cbor-codec",
    "crates/curve25519-dalek",
    "crates/ed25519-dalek"
]

[patch.crates-io.curve25519-dalek]
path = "crates/curve25519-dalek"

[patch.crates-io.ed25519-dalek]
path = "crates/ed25519-dalek"

[features]
default = []
cryptobox-identity = []
hazmat = []

[dependencies]
thiserror = "1.0"
proteus-traits = { version = "2.0", path = "crates/proteus-traits" }

# CSPRNG
rand = { version = "0.8", features = ["getrandom"] }
getrandom = { version = "0.2", features = ["js"] }
rand_chacha = "0.3"

# Crypto
zeroize = { version = "1.5", features = ["zeroize_derive"] }
sha2 = "0.10"
hkdf = "0.12"
hmac = "0.12"
chacha20 = "0.9"
elliptic-curve = "0.11"
ed25519 = "1.3"
ed25519-dalek = { path = "crates/ed25519-dalek", default-features = false, features = ["std", "u64_backend"] }
curve25519-dalek = { path = "crates/curve25519-dalek", default-features = false, features = ["std", "u64_backend"] }
subtle = "2.4"
cbor-codec = { path = "crates/cbor-codec" }
eyre = "0.6"

[dev-dependencies]
criterion = "0.3"
pretty_assertions = "1.3"
proteus = { path = ".", features = ["hazmat"] }
wasm-bindgen-test = "0.3"
hex = "0.4"
ciborium = "0.2"
async-std = { version = "1.12", features = ["attributes"] }
async-trait = "0.1"

[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
proteus-legacy = { git = "https://github.com/wireapp/proteus", branch = "otak/sodiumoxide-0.2.7", package = "proteus", features = ["hazmat"] }

[[bench]]
name = "benchmarks"
harness = false
