[package]
name         = "proteus-wasm"
version      = "2.1.0"
authors      = ["Wire Swiss GmbH <seceng@wire.com>"]
description  = "Axolotl protocol implementation"
homepage     = "https://github.com/wireapp/proteus"
repository   = "https://github.com/wireapp/proteus.git"
license      = "GPL-3.0"
edition      = "2021"

[workspace]
members = [
    "crates/proteus-traits",
    "crates/cbor-codec",
]

[patch.'https://github.com/wireapp/proteus'.proteus]
package = "proteus"
# Keep the extra / in the url, it prevents this error:
# `patch for `proteus` in `https://github.com/wireapp/proteus` points to the same source, but patches must point to different sources`
git = "https://github.com/wireapp//proteus"
branch = "otak/fix-1.0.3"

[features]
default = []
cryptobox-identity = []
public-key-batch-verification = ["ed25519-dalek/batch"]
hazmat = []

[dependencies]
thiserror = "1.0"
proteus-traits = { version = "2.1", path = "crates/proteus-traits" }

# CSPRNG
rand = { version = "0.8", features = ["getrandom"] }
getrandom = { version = "0.2", features = ["js"] }
rand_chacha = "0.3"

# Crypto
zeroize = { version = "1.6", features = ["zeroize_derive"] }
sha2 = "0.10"
hkdf = "0.12"
hmac = "0.12"
chacha20 = "0.9"
ed25519-dalek = { version = "2.0.0-rc.3", features = ["zeroize", "fast"] }
x25519-dalek = { version = "2.0.0-rc.3", features = ["precomputed-tables", "static_secrets", "zeroize"] }
curve25519-dalek = { version = "4.0.0-rc.3", features = ["precomputed-tables", "zeroize"] }
subtle = "2.5"

# Utils
hex = "0.4"
cbor-codec = { path = "crates/cbor-codec" }
eyre = "0.6"

[dev-dependencies]
criterion = "0.5"
pretty_assertions = "1.3"
proteus-wasm = { path = ".", package = "proteus-wasm", features = ["hazmat", "cryptobox-identity", "public-key-batch-verification"] }
wasm-bindgen-test = "0.3"
ciborium = "0.2"
async-std = { version = "1.12", features = ["attributes"] }
async-trait = "0.1"

[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
cryptobox = { git = "https://github.com/wireapp/cryptobox", tag = "v1.0.3" }
proteus = { git = "https://github.com/wireapp/proteus", branch = "otak/fix-1.0.3", package = "proteus" }

[[bench]]
name = "benchmarks"
harness = false
