[package]
name          = "cbor-codec"
version       = "0.7.1"
authors       = ["Toralf Wittner <tw@dtex.org>"]
license       = "MPL-2.0"
description   = "CBOR Codec implementation"
repository    = "https://gitlab.com/twittner/cbor-codec"
documentation = "https://twittner.gitlab.io/cbor-codec/cbor/"
keywords      = ["cbor", "encoding", "binary"]
categories    = ["encoding"]
edition       = "2021"

[lib]
name = "cbor"

[features]
random = ["quickcheck"]

[dependencies]
byteorder = "1.4"
half = "2.1"

[dependencies.quickcheck]
version  = "1.0"
optional = true

[dev-dependencies]
json-codec        = ">= 0.3"
quickcheck        = "1.0"
quickcheck_macros = "1.0"
rand              = "0.8"
hex               = "0.4"
base64            = "0.21"
