[package]
name = "proteus-traits"
version = "2.1.0"
authors = ["Wire Swiss GmbH <seceng@wire.com>"]
description = "Traits for Proteus keystore implementation"
homepage = "https://github.com/wireapp/proteus"
repository = "https://github.com/wireapp/proteus.git"
edition = "2021"
license = "GPL-3.0"

[dependencies]
async-trait = "0.1"
